# huion-switcher

./: .pre-commit-config.yaml  80-huion-switcher.rules  Cargo.toml  LICENSE  README.md  huion-switcher.man
.github/workflows/: main.yml
src/: main.rs
